@@ -44,7 +44,20 @@ int gethex (const char **sp, FPI *fpi, Long *exp, Bigint **bp, int sign)
 	Long e, e1;
 #ifdef USE_LOCALE
 	int i;
+#ifdef NO_LOCALE_CACHE
 	const unsigned char *decimalpoint = (unsigned char*)localeconv()->decimal_point;
+#else
+	const unsigned char *decimalpoint;
+	static unsigned char *decimalpoint_cache;
+	if (!(s0 = decimalpoint_cache)) {
+		s0 = (unsigned char*)localeconv()->decimal_point;
+		if ((decimalpoint_cache = (char*)MALLOC(strlen(s0) + 1))) {
+			strcpy(decimalpoint_cache, s0);
+			s0 = decimalpoint_cache;
+		}
+	}
+	decimalpoint = s0;
+#endif
 #endif
 
 	if (!hexdig['0'])
